kuberInit/api/k8s.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: site-builder-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.build.lan
      http:
        paths:
          - backend:
              serviceName: site-builder-api
              servicePort: 3001
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: site-builder-api
  namespace: default
  labels:
    app: site-builder-api
spec:
  ports:
    - port: 3001
  clusterIP: None
  selector:
    app: site-builder-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-builder-api
  namespace: default
spec:
  selector:
    matchLabels:
      app: site-builder-api
  replicas: 1
  strategy:
    type: "RollingUpdate"
  template:
    metadata:
      labels:
        app: site-builder-api
        commitHash: hhh
    spec:
      containers:
        - image: upachko/site_builder_api:latest
          imagePullPolicy: Always
          name: site-builder-api
          ports:
            - containerPort: 3001
              name: http
          lifecycle:
            postStart:
              exec:
                command: ["sh", "/var/siteBuilderAPI/startProcess.sh", "app"]
